<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/thumbnail_video_kajian_1" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_penceramah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/nama_penceramah"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_channel_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/channel_youtube" />

        <TextView
            android:id="@+id/tv_judul_kajian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_kajian"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_medium"/>



    </LinearLayout>

</androidx.cardview.widget.CardView>